# sang_il_dong_station

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: DashboardShell.tsx  DataQualityPanel.tsx  HourlyProfile.tsx  KpiCards.tsx  OdBarChart.tsx  SectionCard.tsx  TrendChart.tsx  ZoneFlowMap.tsx
docs/: PLANS.md  dashboard-ui-thesis.md  data-dictionary.md  data-source-validation.md  db-first-etl-architecture.md  deploy-blockers.md  known-limitations.md  qa-checklist.md  station-normalization.md  transformation-rules.md  zone-definition.md
etl/: __init__.py  config.py  contracts.py
pages/: 404.tsx  500.tsx
plans/: 00-codex-operating-layer-report.md  00-codex-operating-layer.md  README.md
scripts/: check_data_quality.py  clean-next.mjs  create-pg-config.mjs  db-migrate.mjs  db-seed.mjs  load-env.mjs  preflight.ps1  smoke-api.mjs  verify.ps1
work_instruction/: 00_global-rules.md  01_bootstrap.md  02_data-source-validation.md  03_zone-design-and-station-metadata.md  04_database-schema.md  05_extract.md  06_transform.md  07_load.md  08_api.md  09_dashboard-ui.md  10_testing-qa.md  11_deploy-vercel.md  12_scheduler-ops.md  13_acceptance-and-handover.md  99_master-prompt.md  AGENTS.template.md  README.md  codex-architecture-adoption-guide.md  codex-thread-prompt-architecture-addendum.md  codex_work_order_sangildong_dashboard_staged_merged.md  (+1 more)
(+93 files in other folders)
